thêm link cho logo kênh 14

--- a/BTL/DOI_SONG/KhamPha.html
+++ b/BTL/DOI_SONG/KhamPha.html
@@ -474,7 +474,7 @@
                     <tr>
                         <td>
                             <section>
-                                <a href=""><img src="../images/logo1.png" ></img></a>
+                                <a href="../../BTL1/demoBTL.html"><img src="../images/logo1.png" ></img></a>
                             </section>
                             <aside>
                                 <p><b>ĐÓNG GÓP NỘI DUNG</b></p>
