--- a/BTL/SUC_KHOE/CoXuongKhop.html
+++ b/BTL/SUC_KHOE/CoXuongKhop.html
@@ -297,7 +297,7 @@
                     <tr>
                         <td>
                             <section>
-                                <a href=""><img src="../images/logo1.png" ></img></a>
+                                <a href="../../BTL1/demoBTL.html"><img src="../images/logo1.png" ></img></a>
                             </section>
                             <aside>
                                 <p><b>ĐÓNG GÓP NỘI DUNG</b></p>
