--- a/BTL1/Star/demoBaiBao.html
+++ b/BTL1/Star/demoBaiBao.html
@@ -184,7 +184,7 @@
                     <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
                     <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
                     <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                    <a class="title-mini-web" href="#" id="#liên hệ">Liên hệ</a>
+                    <a class="title-mini-web" href="#liên hệ" >Liên hệ</a>
                     <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
                 </div>
             </div>
