gắn link cho phần của Phi

--- a/BTL/AN_QUAY_DI/An.html
+++ b/BTL/AN_QUAY_DI/An.html
@@ -20,10 +20,10 @@
             <div class="container">
                 <nav>
                     <ul>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span> EMAGAZINE</a></li>
+                        <li><a href="../../BTL3/EMAGAZINE/EMAGAZINE.html"><span style="color: rgb(248, 137, 9);">&#9733;</span> EMAGAZINE</a></li>
                         <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>GENZ AREA</a></li>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>XANH CHƯA - CHECK!!!</a></li>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>SHOWLIVE</a></li>
+                        <li><a href="../../BTL3/XANHCHUA/XANHCHUA.html"><span style="color: rgb(248, 137, 9);">&#9733;</span>XANH CHƯA - CHECK!!!</a></li>
+                        <li><a href="../../BTL3/SHOWLIVE/SHOWLIVE.html"><span style="color: rgb(248, 137, 9);">&#9733;</span>SHOWLIVE</a></li>
                     </ul>
                 </nav>
                 <div class="search-bar">
@@ -307,7 +307,21 @@
         <hr/>
     </div>
     <div class="footer-menu">
-        <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+        <a href="../../BTL1/Star/WebStar.html">Star</a> | 
+        <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> |
+        <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | 
+        <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
+        <a href="#">Sport</a> | 
+        <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | 
+        <a href="../XA_HOI/XaHoi.html">Xã hội</a> | 
+        <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | 
+        <a href="../../BTL3/Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> | 
+        <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+        <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+        <a href="../../Tek-life/Tek-life.html">Tek-Life</a> | 
+        <a href="../../BTL3/Hocduong/Hocduong.html">Học đường</a>  | 
+        <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | 
+        <a href="../../BTL3/Video/Danghot.html">Video</a>
     </div>
     <div class="footer-max">
         <div class="footer-table1">
@@ -373,7 +387,7 @@
                 <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
-            <h4>LIÊN HỆ QUẢNG CÁO</h4>
+            <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
             <div class="logo-mini">
                 <img src="../images/logoDT.png" width="20px"></a>
                 <span>02473007108</span>
@@ -401,6 +415,7 @@
         
         </div>
     </div>
+</div>
 </body>
 
 </html>
