--- a/BTL/SUC_KHOE/TieuHoa.html
+++ b/BTL/SUC_KHOE/TieuHoa.html
@@ -23,10 +23,10 @@
             <div class="container">
                 <nav>
                     <ul>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span> EMAGAZINE</a></li>
+                       <li><a href="../../BTL3/EMAGAZINE/EMAGAZINE.html"><span style="color: rgb(248, 137, 9);">&#9733;</span> EMAGAZINE</a></li>
                         <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>GENZ AREA</a></li>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>XANH CHƯA - CHECK!!!</a></li>
-                        <li><a href="#"><span style="color: rgb(248, 137, 9);">&#9733;</span>SHOWLIVE</a></li>
+                        <li><a href="../../BTL3/XANHCHUA/XANHCHUA.html"><span style="color: rgb(248, 137, 9);">&#9733;</span>XANH CHƯA - CHECK!!!</a></li>
+                        <li><a href="../../BTL3/SHOWLIVE/SHOWLIVE.html"><span style="color: rgb(248, 137, 9);">&#9733;</span>SHOWLIVE</a></li>
                     </ul>
                 </nav>
                 <div class="search-bar">
@@ -67,10 +67,10 @@
                     <li><a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a></li>
                     <li><a href="../XA_HOI/XaHoi.html">Xã hội</a></li>
                     <li><a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a></li>
-                    <li><a href="#">Tek-life</a></li>
-                    <li><a href="#">Học đường</a></li>
-                    <li><a href="#">Xem Mua Luôn</a></li>
-                    <li><a href="#">Video</a></li>
+                    <li><a href="../../BTL3/Tek-life/Tek-Life.html">Tek-life</a></li>
+                    <li><a href="../../BTL3/Hocduong/Hocduong.html">Học đường</a></li>
+                    <li><a href="../../BTL3/Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a></li>
+                    <li><a href="../../BTL3/Video/Danghot.html">Video</a></li>
                     <li class="main-menu">
                         <a class="menu-toggle" onclick="changeIcon(this)">•••</a>
                     </li>
@@ -89,11 +89,11 @@
                         </div>
                     </div>
                     <div class="menu-column">
-                        <a href="#">Xem mua luôn</a>
+                        <a class="title-menu" href="../../BTL3/Xemmualuon/Xemmualuon.html">Xem mua luôn</a>
                         <div class="submenu">
-                            <a href="#">Thời trang</a>
-                            <a href="#">Đẹp</a>
-                            <a href="#">Mommy mua di</a>
+                            <a href="../../BTL3/Xemmualuon/Thoitrang.html">Thời trang</a>
+                            <a href="../../BTL3/Xemmualuon/Dep.html">Đẹp</a>
+                            <a href="../../BTL3/Xemmualuon/MOMMYmuadi.html">Mommy mua di</a>
                         </div>
                     </div>
                     <div class="menu-column">
@@ -123,12 +123,12 @@
                         </div>
                     </div>
                     <div class="menu-column">
-                        <a class="title-menu"href="#">Tek-Life</a>
+                        <a class="title-menu"href="../../BTL3/Tek-life/Tek-life.html">Tek-Life</a>
                         <div class="submenu">
-                            <a href="#">Metaverse</a>
-                            <a href="#">How-To</a>
-                            <a href="#">Wow</a>
-                            <a href="#">2-Mall</a>
+                            <a href="../../BTL3/Tek-life/Metaverse.html">Metaverse</a>
+                            <a href="../../BTL3/Tek-life/How-to.html">How-To</a>
+                            <a href="../../BTL3/Tek-life/Wow.html">Wow</a>
+                            <a href="../../BTL3/Tek-life/2-Mall.html">2-Mall</a>
                         </div>
                     </div>
                 </div>
@@ -150,11 +150,11 @@
                         </div>
                     </div>
                     <div class="menu-column">
-                        <a href="#">Học đường</a>
+                        <a class="title-menu" href="../../BTL3/Hocduong/Hocduong.html">Học đường</a>
                         <div class="submenu">
                             <a href="../DOI_SONG/NhanVat.html">Nhân vật</a>
-                            <a href="">Du học</a>
-                            <a href="#">Bản tin 46'</a>
+                            <a href="../../BTL3/Hocduong/Duhoc.html">Du học</a>
+                            <a href="../../BTL3/Hocduong/Bantin46.html">Bản tin 46'</a>
                         </div>
                     </div>
                     <div class="menu-column">
@@ -185,7 +185,7 @@
                 <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
                 <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
                 <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                <a class="title-mini-web" href="#" id="#liên hệ">Liên hệ</a>
+                <a class="title-mini-web" href="#liên hệ" >Liên hệ</a>
                 <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
             </div>
         </div>
@@ -348,7 +348,21 @@
             <hr/>
         </div>
         <div class="footer-menu">
-            <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+            <a href="../../BTL1/Star/WebStar.html">Star</a> | 
+            <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> |
+            <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | 
+            <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
+            <a href="#">Sport</a> | 
+            <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | 
+            <a href="../XA_HOI/XaHoi.html">Xã hội</a> | 
+            <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | 
+            <a href="../../BTL3/Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> | 
+            <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+            <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+            <a href="../../Tek-life/Tek-life.html">Tek-Life</a> | 
+            <a href="../../BTL3/Hocduong/Hocduong.html">Học đường</a>  | 
+            <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | 
+            <a href="../../BTL3/Video/Danghot.html">Video</a>
         </div>
         <div class="footer-max">
             <div class="footer-table1">
@@ -414,7 +428,7 @@
                     <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                     <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
                 </div>
-                <h4>LIÊN HỆ QUẢNG CÁO</h4>
+                <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
                 <div class="logo-mini">
                     <img src="../images/logoDT.png" width="20px"></a>
                     <span>02473007108</span>
