--- a/BTL/DOI_SONG/House_n_Home.html
+++ b/BTL/DOI_SONG/House_n_Home.html
@@ -550,7 +550,21 @@
             <hr/>
         </div>
         <div class="footer-menu">
-            <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+            <a href="../../BTL1/Star/WebStar.html">Star</a> | 
+            <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> |
+            <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | 
+            <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
+            <a href="#">Sport</a> | 
+            <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | 
+            <a href="../XA_HOI/XaHoi.html">Xã hội</a> | 
+            <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | 
+            <a href="../../BTL3/Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> | 
+            <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+            <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+            <a href="../../Tek-life/Tek-life.html">Tek-Life</a> | 
+            <a href="../../BTL3/Hocduong/Hocduong.html">Học đường</a>  | 
+            <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | 
+            <a href="../../BTL3/Video/Danghot.html">Video</a>
         </div>
         <div class="footer-max">
             <div class="footer-table1">
@@ -616,7 +630,7 @@
                     <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                     <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
                 </div>
-                <h4>LIÊN HỆ QUẢNG CÁO</h4>
+                <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
                 <div class="logo-mini">
                     <img src="../images/logoDT.png" width="20px"></a>
                     <span>02473007108</span>
