--- a/BTL1/demoBTL.html
+++ b/BTL1/demoBTL.html
@@ -829,16 +829,16 @@
                         <div class="pre-footer-item">
                             <a href="#">
                                 <div class="img-aside2-container">
-                                    <img src="./img/Tính cách thật của bạn gái HIEUTHUHAI.jpg" alt="Tính cách thật của bạn gái HIEUTHUHAI" class="img-aside2">
+                                    <img src="./img/Khi sao Việt bước vào địa hạt F&B.webp" alt="Khi sao Việt bước vào địa hạt F&B" class="img-aside2">
                                 </div>
-                                <p class="pre-footer-item1">Clip: Tính cách thật của bạn gái HIEUTHUHAI</p> </a>
-                                <p class="pre-footer-item4">Từ visual đến tính cách của bạn gái HIEUTHUHAI ngoài đời khác với trên mạng thế nào?</a>
+                                <p class="pre-footer-item1">Khi sao Việt bước vào địa hạt F&B: Tăng Thanh Hà mở 3 cơ sở nhà hàng, toàn ở vị trí đắc địa; Jack khai trương ồn ào rồi lặng lẽ đóng quán sau 4 tháng</p> </a>
+                                <p class="pre-footer-item4">Nếu như nhà hàng của Ngọc Trinh nhận được nhiều lời khen ngợi như giá cả bình dân, chất lượng món ăn đồng đều, thì nhà hàng Beefsteak của Jack</a>
                                 </p><br><br>
                            
                         </div>
                         <div class="border-solid2"></div>
                         <div class="pre-footer-item">
-                            <p><a class="pre-footer-item2" href="#">Thu nhập 2 vợ chồng 35 triệu đồng, sống với bố mẹ chồng ở quê mà tháng nào cũng sạch tiền: CĐM chia thành 2 phe nêu quan điểm!</a></p>
+                            <p><a class="pre-footer-item2" href="#">Công thức làm sắn hấp cốt dừa dẻo thơm</a></p>
                         </div>
                     </div>
                 </div>
