--- a/BTL3/Hocduong/Duhoc.html
+++ b/BTL3/Hocduong/Duhoc.html
@@ -16,7 +16,6 @@
        <!-- Linking SwiperJS script -->
        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
-
 <body>
     <header>
         <div class="top-bar">
@@ -30,8 +29,9 @@
                     </ul>
                 </nav>
                 <div class="search-bar">
-                    <input type="text" placeholder="Tìm kiếm...">
-                    <button type="submit" style="background-color: black;"><i class="fa-solid fa-magnifying-glass" style="color: white;"></i></button>
+                    <input type="text" id ="search" style="color:white" placeholder="Tìm kiếm...">
+                    <button type="button" onclick="CheckSearch()" style="background-color: black;">
+                        <i class="fa-solid fa-magnifying-glass" style="color: white;"></i></button>
                 </div>
             </div>
         </div>
@@ -70,109 +70,110 @@
                     <li><a href="../Hocduong/Hocduong.html">Học đường</a></li>
                     <li><a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a></li>
                     <li><a href="../Video/Danghot.html">Video</a></li>
-                    <li class="main-menu">
-                        <a class="menu-toggle" onclick="changeIcon(this)">•••</a>
+                  <li class="main-menu">
+                      <a class="menu-toggle" onclick="changeIcon(this)">•••</a>
 
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="subs-menu">
-            <div class="container">
-                <div class="menu-row">
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a>
-                        <div class="submenu">
-                            <a href="../../BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
-                            <a href="../../BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
-                            <a href="../../BTL/DOI_SONG/House_n_Home.html">House n Home</a>
-                        </div>
-                    </div class="menu-column">
-                        <a href="../Xemmualuon/Xemmualuon.html">Xem mua luôn</a>
-                        <div class="submenu">
-                            <a href="../Xemmualuon/Thoitrang.html">Thời trang</a>
-                            <a href="../Xemmualuon/Dep.html">Đẹp</a>
-                            <a href="../Xemmualuon/MOMMYmuadi.html">Mommy mua di</a>
-                        </div>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+      <div class="subs-menu">
+          <div class="container">
+              <div class="menu-row">
+                  <div class="menu-column">
+                    <a class="title-menu" href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a>
+                    <div class="submenu">
+                        <a href="../../BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
+                        <a href="../../BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
+                        <a href="../../BTL/DOI_SONG/House_n_Home.html">House n Home</a>
                     </div>
-                    <div class="menu-column">
-                        <a href="#">Sport</a>
-                        <div class="submenu">
-                            <a href="#">Bóng đá</a>
-                            <a href="#">Bóng rổ</a>
-                            <a href="#">Bóng chuyền</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a class="title-menu" href="..../../BTL1/Musik/WebMusik.html">Musik</a>
-                         <div class="submenu">
-                             <a href="../../BTL1/Musik/WebAuMy.html">Âu-Mỹ</a>
-                             <a href="../../BTL1/Musik/WebChauA.html">Châu Á</a>
-                             <a href="../../BTL1/Musik/WebVietNam.html">Việt Nam</a>
-                             <a href="../../BTL1/demoBTL.html">Hip-hop neva die</a>
-                         </div>
-                 </div>
-                 <div class="menu-column">
+                </div>
+                  <div class="menu-column">
+                    <a href="../Xemmualuon/Xemmualuon.html">Xem mua luôn</a>
+                    <div class="submenu">
+                        <a href="../Xemmualuon/Thoitrang.html">Thời trang</a>
+                        <a href="../Xemmualuon/Dẹp.html">Đẹp</a>
+                        <a href="../Xemmualuon/MOMMYmuadi.html">Mommy mua di</a>
+                      </div>
+                  </div>
+                  <div  class="menu-column">
+                      <a class="title-menu" href="#">Sport</a>
+                      <div class="submenu">
+                          <a href="#">Bóng đá</a>
+                          <a href="#">Bóng rổ</a>
+                          <a href="#">Bóng chuyền</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a class="title-menu" href="..../../BTL1/Musik/WebMusik.html">Musik</a>
+                     <div class="submenu">
+                         <a href="../../BTL1/Musik/WebAuMy.html">Âu-Mỹ</a>
+                         <a href="../../BTL1/Musik/WebChauA.html">Châu Á</a>
+                         <a href="../../BTL1/Musik/WebVietNam.html">Việt Nam</a>
+                         <a href="../../BTL1/demoBTL.html">Hip-hop neva die</a>
+                      </div>
+                  </div>
+                  
+                  <div class="menu-column">
                     <a class="title-menu" href="..../../BTL1/Ciné/WebCine.html">Ciné</a>
                     <div class="submenu">
                         <a href="../../BTL1/Ciné/WebPhimChieuRap.html">Phim chiếu rạp</a>
                         <a href="../../BTL1/Ciné/WebPhimVietNam.html">Phim Việt Nam</a>
                         <a href="../../BTL1/Ciné/WebSeriesTruyenHinh.html">Series truyền hình</a>
                         <a href="../../BTL1/Ciné/WebHoaNguHanQuoc.html">Hoa ngữ - Hàn Quốc</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../Video/Danghot.html"> Đang hot </a>
+                    <div class="submenu">
+                        <a href="../Video/Nongnhat.html">Nóng nhất</a>
                     </div>
                 </div>
-                    <div class="menu-column">
-                        <a href="../Tek-life/Tek-life.html"> Tek-life</a>
-                        <div class="submenu">
-                            <a href="../Tek-life/Metaverse.html">Metaverse</a>
-                            <a href="../Tek-life/How-to.html">How-To</a>
-                            <a href="../Tek-life/Wow.html">Wow</a>
-                            <a href="../Tek-life/2-Mall.html">2-Mall</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-row">
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL1/Star/WebStar.html">Star</a>
-                        <div class="submenu">
-                            <a href="../../BTL1/Star/WebSaoViet.html">Sao Việt</a>
-                            <a href="../../BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
-                            <a href="../../BTL1/Star/WebTVShow.html">TV Show</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a>
-                        <div class="submenu">
-                            <a href="../../BTL/XA_HOI/XaHoi.html">Pháp luật</a>
-                            <a href="../../BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
-                            <a href="../../BTL/XA_HOI/SongXanh.html">Sống xanh</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a href="../Hocduong/Hocduong.html">Học đường</a>
-                        <div class="submenu">
-                            <a href="../Hocduong/Bantin46.html">Bản tin 46'</a>
-                            <a href="../Hocduong/Duhoc.html">Du học</a>
-                            <a href="../Hocduong/Nhanvat.html">Nhân vật </a>
-                            <a href="../Hocduong/Z-Schooltour.html">Z-School tour </a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a>
-                            <div class="submenu">
-                                <a href="../../BTL/DOI_SONG/ChumAnh.html">Chùm ảnh</a>
-                                <a href="../../BTL/DOI_SONG/KhamPha.html">Khám phá</a>
-                                <a href="../../BTL/DOI_SONG/Di.html">Dị</a>
-                            </div>
-                        </div>
-                    <div class="menu-column">
-                        <a href="../Video/Danghot.html"> Đang hot </a>
-                        <div class="submenu">
-                            <a href="../Video/Nongnhat.html">Nóng nhất</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-column">
+                  <div class="menu-column">
+                    <a href="../Tek-life/Tek-life.html"> Tek-life</a>
+                    <div class="submenu">
+                        <a href="../Tek-life/Metaverse.html">Metaverse</a>
+                        <a href="../Tek-life/How-to.html">How-To</a>
+                        <a href="../Tek-life/Wow.html">Wow</a>
+                        <a href="../Tek-life/2-Mall.html">2-Mall</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="menu-row">
+                  <div class="menu-column">
+                    <a class="title-menu" href="../../BTL1/Star/WebStar.html">Star</a>
+                    <div class="submenu">
+                        <a href="../../BTL1/Star/WebSaoViet.html">Sao Việt</a>
+                        <a href="../../BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
+                        <a href="../../BTL1/Star/WebTVShow.html">TV Show</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                      <a class="title-menu" href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a>
+                      <div class="submenu">
+                          <a href="../../BTL/XA_HOI/XaHoi.html">Pháp luật</a>
+                          <a href="../../BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
+                          <a href="../../BTL/XA_HOI/SongXanh.html">Sống xanh</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../Hocduong/Hocduong.html">Học đường</a>
+                    <div class="submenu">
+                        <a href="../Hocduong/Bantin46.html">Bản tin 46'</a>
+                        <a href="../Hocduong/Duhoc.html">Du học</a>
+                        <a href="../Hocduong/Nhanvat.html">Nhân vật </a>
+                        <a href="../Hocduong/Z-Schooltour.html">Z-School tour </a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a>
+                    <div class="submenu">
+                        <a href="../../BTL/DOI_SONG/ChumAnh.html">Chùm ảnh</a>
+                        <a href="../../BTL/DOI_SONG/KhamPha.html">Khám phá</a>
+                        <a href="../../BTL/DOI_SONG/Di.html">Dị</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
                     <a class="title-menu" href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
                     <div class="submenu">
                         <a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
@@ -181,21 +182,22 @@
                         <a href="../../BTL/SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
                         <a href="../../BTL/SUC_KHOE/GioiTinh.html">Giới tính</a>
                         <a href="../../BTL/SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
-                    </div>
+                      </div>
+                  </div>
                 </div>
-                </div>
-                <div class="border-solid"></div>
-                <div class="web-info">
-                    <span class="title-mini-web">Tải app</span>
-                    <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BA%BB/id670518264?ls=1" target="_blank">IOS</a>
-                    <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
-                    <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                    <a class="title-mini-web" href="#">Liên hệ</a>
-                    <a class="mini-web" href="#">Quảng cáo</a>
-                </div>
+
+            </div>
+            <div class="border-solid"></div>
+            <div class="web-info">
+                <span class="title-mini-web">Tải app</span>
+                <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
+                <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
+                <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
+                <a class="title-mini-web" href="#liên hệ" >Liên hệ</a>
+                <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
+            </div>
         </div>
-    </header>
-    </div>
+    </header>S
 </div>
 <div class="space">
 </div>
@@ -207,8 +209,8 @@
                 <li><a href="Duhoc.html"><b>Du học</b></a></li>
                 <li><a href="Bantin46.html"><b>Bản tin 46'</b></a></li>
                 <li><a href="Z-Schooltour.html"><b>Z-School tour </b></a></li>
-                <li><a href="#"><b>DỊ</b></a></li>
-                <li><a href="#"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="../../BTL/DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="../../BTL/SUC_KHOE/SucKhoe.html"><b>Sức khỏe</b></a></li>
             </ul>
         </div><br>
         <hr/>
@@ -307,7 +309,7 @@
             <hr/>
             <div class="two">
                 <section>
-                    <a href="#"><video autoplay loop muted playsinline width=250px><source src="../image/vd12.mp4" type="video/mp4"></video></a>
+                    <video autoplay controls loop muted playsinline width=250px><source src="https://kenh14cdn.com/203336854389633024/2023/8/13/photo1691937649053-169193764925716348400.gif.mp4"></video>
                 </section>
                 <aside>
                     <p><b><a href="#">Chàng trai Việt kể về "cú sốc đầu đời" khi đến Phần Lan du học, sợ run khi vào siêu thị</a></b></p>
