--- a/BTL3/XANHCHUA/XANHCHUA.html
+++ b/BTL3/XANHCHUA/XANHCHUA.html
@@ -29,8 +29,9 @@
                     </ul>
                 </nav>
                 <div class="search-bar">
-                    <input type="text" placeholder="Tìm kiếm...">
-                    <button type="submit" style="background-color: black;"><i class="fa-solid fa-magnifying-glass" style="color: white;"></i></button>
+                    <input type="text" id ="search" style="color:white" placeholder="Tìm kiếm...">
+                    <button type="button" onclick="CheckSearch()" style="background-color: black;">
+                        <i class="fa-solid fa-magnifying-glass" style="color: white;"></i></button>
                 </div>
             </div>
         </div>
@@ -69,109 +70,110 @@
                     <li><a href="../Hocduong/Hocduong.html">Học đường</a></li>
                     <li><a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a></li>
                     <li><a href="../Video/Danghot.html">Video</a></li>
-                    <li class="main-menu">
-                        <a class="menu-toggle" onclick="changeIcon(this)">•••</a>
+                  <li class="main-menu">
+                      <a class="menu-toggle" onclick="changeIcon(this)">•••</a>
 
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="subs-menu">
-            <div class="container">
-                <div class="menu-row">
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a>
-                        <div class="submenu">
-                            <a href="../../BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
-                            <a href="../../BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
-                            <a href="../../BTL/DOI_SONG/House_n_Home.html">House n Home</a>
-                        </div>
-                    </div class="menu-column">
-                        <a href="../Xemmualuon/Xemmualuon.html">Xem mua luôn</a>
-                        <div class="submenu">
-                            <a href="../Xemmualuon/Thoitrang.html">Thời trang</a>
-                            <a href="../Xemmualuon/Dep.html">Đẹp</a>
-                            <a href="../Xemmualuon/MOMMYmuadi.html">Mommy mua di</a>
-                        </div>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+      <div class="subs-menu">
+          <div class="container">
+              <div class="menu-row">
+                  <div class="menu-column">
+                    <a class="title-menu" href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a>
+                    <div class="submenu">
+                        <a href="../../BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
+                        <a href="../../BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
+                        <a href="../../BTL/DOI_SONG/House_n_Home.html">House n Home</a>
                     </div>
-                    <div class="menu-column">
-                        <a href="#">Sport</a>
-                        <div class="submenu">
-                            <a href="#">Bóng đá</a>
-                            <a href="#">Bóng rổ</a>
-                            <a href="#">Bóng chuyền</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a class="title-menu" href="..../../BTL1/Musik/WebMusik.html">Musik</a>
-                         <div class="submenu">
-                             <a href="../../BTL1/Musik/WebAuMy.html">Âu-Mỹ</a>
-                             <a href="../../BTL1/Musik/WebChauA.html">Châu Á</a>
-                             <a href="../../BTL1/Musik/WebVietNam.html">Việt Nam</a>
-                             <a href="../../BTL1/demoBTL.html">Hip-hop neva die</a>
-                         </div>
-                 </div>
-                 <div class="menu-column">
+                </div>
+                  <div class="menu-column">
+                    <a href="../Xemmualuon/Xemmualuon.html">Xem mua luôn</a>
+                    <div class="submenu">
+                        <a href="../Xemmualuon/Thoitrang.html">Thời trang</a>
+                        <a href="../Xemmualuon/Dẹp.html">Đẹp</a>
+                        <a href="../Xemmualuon/MOMMYmuadi.html">Mommy mua di</a>
+                      </div>
+                  </div>
+                  <div  class="menu-column">
+                      <a class="title-menu" href="#">Sport</a>
+                      <div class="submenu">
+                          <a href="#">Bóng đá</a>
+                          <a href="#">Bóng rổ</a>
+                          <a href="#">Bóng chuyền</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a class="title-menu" href="..../../BTL1/Musik/WebMusik.html">Musik</a>
+                     <div class="submenu">
+                         <a href="../../BTL1/Musik/WebAuMy.html">Âu-Mỹ</a>
+                         <a href="../../BTL1/Musik/WebChauA.html">Châu Á</a>
+                         <a href="../../BTL1/Musik/WebVietNam.html">Việt Nam</a>
+                         <a href="../../BTL1/demoBTL.html">Hip-hop neva die</a>
+                      </div>
+                  </div>
+                  
+                  <div class="menu-column">
                     <a class="title-menu" href="..../../BTL1/Ciné/WebCine.html">Ciné</a>
                     <div class="submenu">
                         <a href="../../BTL1/Ciné/WebPhimChieuRap.html">Phim chiếu rạp</a>
                         <a href="../../BTL1/Ciné/WebPhimVietNam.html">Phim Việt Nam</a>
                         <a href="../../BTL1/Ciné/WebSeriesTruyenHinh.html">Series truyền hình</a>
                         <a href="../../BTL1/Ciné/WebHoaNguHanQuoc.html">Hoa ngữ - Hàn Quốc</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../Video/Danghot.html"> Đang hot </a>
+                    <div class="submenu">
+                        <a href="../Video/Nongnhat.html">Nóng nhất</a>
                     </div>
                 </div>
-                    <div class="menu-column">
-                        <a href="../Tek-life/Tek-life.html"> Tek-life</a>
-                        <div class="submenu">
-                            <a href="../Tek-life/Metaverse.html">Metaverse</a>
-                            <a href="../Tek-life/How-to.html">How-To</a>
-                            <a href="../Tek-life/Wow.html">Wow</a>
-                            <a href="../Tek-life/2-Mall.html">2-Mall</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-row">
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL1/Star/WebStar.html">Star</a>
-                        <div class="submenu">
-                            <a href="../../BTL1/Star/WebSaoViet.html">Sao Việt</a>
-                            <a href="../../BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
-                            <a href="../../BTL1/Star/WebTVShow.html">TV Show</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a class="title-menu" href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a>
-                        <div class="submenu">
-                            <a href="../../BTL/XA_HOI/XaHoi.html">Pháp luật</a>
-                            <a href="../../BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
-                            <a href="../../BTL/XA_HOI/SongXanh.html">Sống xanh</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a href="../Hocduong/Hocduong.html">Học đường</a>
-                        <div class="submenu">
-                            <a href="../Hocduong/Bantin46.html">Bản tin 46'</a>
-                            <a href="../Hocduong/Duhoc.html">Du học</a>
-                            <a href="../Hocduong/Nhanvat.html">Nhân vật </a>
-                            <a href="../Hocduong/Z-Schooltour.html">Z-School tour </a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a>
-                            <div class="submenu">
-                                <a href="../../BTL/DOI_SONG/ChumAnh.html">Chùm ảnh</a>
-                                <a href="../../BTL/DOI_SONG/KhamPha.html">Khám phá</a>
-                                <a href="../../BTL/DOI_SONG/Di.html">Dị</a>
-                            </div>
-                        </div>
-                    <div class="menu-column">
-                        <a href="../Video/Danghot.html"> Đang hot </a>
-                        <div class="submenu">
-                            <a href="../Video/Nongnhat.html">Nóng nhất</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-column">
+                  <div class="menu-column">
+                    <a href="../Tek-life/Tek-life.html"> Tek-life</a>
+                    <div class="submenu">
+                        <a href="../Tek-life/Metaverse.html">Metaverse</a>
+                        <a href="../Tek-life/How-to.html">How-To</a>
+                        <a href="../Tek-life/Wow.html">Wow</a>
+                        <a href="../Tek-life/2-Mall.html">2-Mall</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="menu-row">
+                  <div class="menu-column">
+                    <a class="title-menu" href="../../BTL1/Star/WebStar.html">Star</a>
+                    <div class="submenu">
+                        <a href="../../BTL1/Star/WebSaoViet.html">Sao Việt</a>
+                        <a href="../../BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
+                        <a href="../../BTL1/Star/WebTVShow.html">TV Show</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                      <a class="title-menu" href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a>
+                      <div class="submenu">
+                          <a href="../../BTL/XA_HOI/XaHoi.html">Pháp luật</a>
+                          <a href="../../BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
+                          <a href="../../BTL/XA_HOI/SongXanh.html">Sống xanh</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../Hocduong/Hocduong.html">Học đường</a>
+                    <div class="submenu">
+                        <a href="../Hocduong/Bantin46.html">Bản tin 46'</a>
+                        <a href="../Hocduong/Duhoc.html">Du học</a>
+                        <a href="../Hocduong/Nhanvat.html">Nhân vật </a>
+                        <a href="../Hocduong/Z-Schooltour.html">Z-School tour </a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
+                    <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a>
+                    <div class="submenu">
+                        <a href="../../BTL/DOI_SONG/ChumAnh.html">Chùm ảnh</a>
+                        <a href="../../BTL/DOI_SONG/KhamPha.html">Khám phá</a>
+                        <a href="../../BTL/DOI_SONG/Di.html">Dị</a>
+                      </div>
+                  </div>
+                  <div class="menu-column">
                     <a class="title-menu" href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
                     <div class="submenu">
                         <a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
@@ -180,21 +182,22 @@
                         <a href="../../BTL/SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
                         <a href="../../BTL/SUC_KHOE/GioiTinh.html">Giới tính</a>
                         <a href="../../BTL/SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
-                    </div>
+                      </div>
+                  </div>
                 </div>
-                </div>
-                <div class="border-solid"></div>
-                <div class="web-info">
-                    <span class="title-mini-web">Tải app</span>
-                    <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BA%BB/id670518264?ls=1" target="_blank">IOS</a>
-                    <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
-                    <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                    <a class="title-mini-web" href="#">Liên hệ</a>
-                    <a class="mini-web" href="#">Quảng cáo</a>
-                </div>
+
+            </div>
+            <div class="border-solid"></div>
+            <div class="web-info">
+                <span class="title-mini-web">Tải app</span>
+                <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
+                <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
+                <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
+                <a class="title-mini-web" href="#liên hệ" >Liên hệ</a>
+                <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
+            </div>
         </div>
     </header>
-    </div>
 </div>
 <div class="space">
 </div>
@@ -239,7 +242,7 @@
          
             <div class="three">
                 <section>
-                    <a href="#"><video autoplay loop muted playsinline width=250px><source src="../image/vd104.mp4" type="video/mp4"></video></a>
+                    <video autoplay controls loop muted playsinline width=280px><source src="https://kenh14cdn.com/203336854389633024/2024/10/20/avatar1729430270637-17294302718681732939185.gif.mp4" ></video>
                 </section>
                 <aside>
                     <p><b><a href="#">Hiện trường toàn rác sau đêm concert của 2 show Anh Trai</a></b></p>
@@ -357,17 +360,6 @@
             <hr/>
             <div class="three">
                 <section>
-                    <a href="#"><video autoplay loop muted playsinline width=250px><source src="../image/vd105.mp4" type="video/mp4"></video></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Danh tính mỹ nhân khiến 56 triệu người “khao khát”, đang hot thì bất ngờ bị tố làm màu</a></b></p>
-                    <p><b>Metaverse -</b>  <time>8 giờ trước</time></p>
-                    <p>Chỉ ngồi yên thôi mà mỹ nhân này khiến cộng đồng mạng được phen náo loạn.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="three">
-                <section>
                     <a href="#"><img src="../image/anh279.png" ></a>
                 </section>
                 <aside>
@@ -379,7 +371,7 @@
             <hr/>
             <div class="three">
                 <section>
-                    <a href="#"><video autoplay loop muted playsinline width=250px><source src="../image/vd106.mp4" type="video/mp4"></video></a>
+                    <video autoplay controls loop muted playsinline width=280px><source src="https://kenh14cdn.com/203336854389633024/2024/9/25/giphy-17272429719341263781638.gif.mp4" ></video>
                 </section>
                 <aside>
                     <p><b><a href="#">Châu Âu biến thành sông: Loạt quốc gia chịu mưa lũ “300 năm có 1”, ô tô, nhà cửa trôi nổi trong biển nước</a></b></p>
@@ -489,7 +481,7 @@
             <hr/>
             <div class="three">
                 <section>
-                    <a href="#"><video autoplay loop muted playsinline width=250px><source src="../image/vd107.mp4" type="video/mp4"></video></a>
+                    <video autoplay controls loop muted playsinline width=280px><source src="https://kenh14cdn.com/203336854389633024/2024/8/24/avatar1724507750605-17245077523371338743562.gif.mp4" ></video>
                 </section>
                 <aside>
                     <p><b><a href="#">Hàng trăm bạn trẻ Đà Nẵng lặn biển nhặt rác, giải cứu san hô</a></b></p>
@@ -501,7 +493,21 @@
             <hr/>
         </div>
         <div class="footer-menu">
-            <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a> |  <a href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a> |   <a href="../../BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | <a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> |  <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> |<a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="../Tek-life/Tek-life.html">Tek-Life</a> | <a href="../Hocduong/Hocduong.html">Học đường</a> |  <a href="../../BTL/MONEY-Z/Money-Z.html">Money-Z</a>| <a href="../Video/Danghot.html">Video</a>
+            <a href="../../BTL1/Star/WebStar.html">Star</a> | 
+                <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | 
+                <a href="../../BTL1/Musik/WebMusik.html">Musik</a>  | 
+                <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
+                <a href="#">Sport</a> | 
+                <a href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a> | 
+                <a href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a> | 
+                <a href="../../BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | 
+                <a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> | 
+                <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+                <a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+                <a href="../Tek-life/Tek-life.html">Tek-Life</a> | 
+                <a href="../Hocduong/Hocduong.html">Học đường</a> | 
+                <a href="../../BTL/MONEY-Z/Money-Z.html">Money-Z</a> | 
+                <a href="../Video/Danghot.html">Video</a>
         </div>
         <div class="footer-max">
             <div class="footer-table1">
