--- a/BTL3/Hocduong/Duhoc.html
+++ b/BTL3/Hocduong/Duhoc.html
@@ -488,7 +488,21 @@
             <hr/>
 
             <div class="footer-menu">
-                <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a> |  <a href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a> |   <a href="../../BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | <a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> |  <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> |<a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="../Tek-life/Tek-life.html">Tek-Life</a> | <a href="../Hocduong/Hocduong.html">Học đường</a> |  <a href="../../BTL/MONEY-Z/Money-Z.html">Money-Z</a>| <a href="../Video/Danghot.html">Video</a>
+                <a href="../../BTL1/Star/WebStar.html">Star</a> | 
+                    <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | 
+                    <a href="../../BTL1/Musik/WebMusik.html">Musik</a>  | 
+                    <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
+                    <a href="#">Sport</a> | 
+                    <a href="../../BTL/DOI_SONG/DoiSong.html">Đời sống</a> | 
+                    <a href="../../BTL/XA_HOI/XaHoi.html">Xã hội</a> | 
+                    <a href="../../BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | 
+                    <a href="../Xemmualuon/Xemmualuon.html">Xem Mua Luôn</a> | 
+                    <a href="../../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+                    <a href="../../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+                    <a href="../Tek-life/Tek-life.html">Tek-Life</a> | 
+                    <a href="../Hocduong/Hocduong.html">Học đường</a> | 
+                    <a href="../../BTL/MONEY-Z/Money-Z.html">Money-Z</a> | 
+                    <a href="../Video/Danghot.html">Video</a>
             </div>
             <div class="footer-max">
                 <div class="footer-table1">
