--- a/BTL3/XANHCHUA/XANHCHUA.html
+++ b/BTL3/XANHCHUA/XANHCHUA.html
@@ -212,7 +212,7 @@
                         <ul>
                             <li><a href="XANHCHUA.html"><b>Xanh chưa, check!!!</b></a></li>
             
-                    </div><br>
+                    </div>
                     <hr/>
                 </section>
             </div>
