--- a/BTL3/Xemmualuon/Xemmualuon.html
+++ b/BTL3/Xemmualuon/Xemmualuon.html
@@ -513,7 +513,7 @@
                 </div>
                 <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
                 <div class="logo-mini">
-                    <img src="../images/logoDT.jpg" width="20px"></a>
+                    <img src="../image/logoDT.jpg" width="20px"></a>
                     <span>02473007108</span>
                 </div>
                 <div class="logo-mini-1">
