--- a/BTL3/EMAGAZINE/EMAGAZINE.html
+++ b/BTL3/EMAGAZINE/EMAGAZINE.html
@@ -208,21 +208,21 @@
         <div class="body">
             <div class="one">         
                 <section>
-                    <a href="#"><img src="../image/anh253.png" ></a>
+                    <a href="#"><img src="../image/anh253.png" width="1000px" ></a>
                 </section>
 
             </div>
             <hr/>
             <div class="two">
                 <aside>     
-                    <a href="#"><img src="../image/anh254.png" ></a>
+                    <a href="#"><img src="../image/anh254.png" width="500px"></a>
                 <p><b><a href="#">
                     Thảo Nhi Lê: “Yêu ai thì phải nói, đừng đợi đến 40 tuổi, lúc đó… ế chồng mất!”</a></b></p>
                     <p><time>5 giờ trước</time></p>
                 <p>Thảo Nhi Lê lần đầu chia sẻ về những ý kiến xoay quanh cách bình luận của cô tại Đảo Thiên Đường, cũng như chia sẻ những góc nhìn độc đáo về phụ nữ hiện đại và các dự định trong tương lai</p>           
                 </aside>    
                 <aside> 
-                    <a href="#"><img src="../image/anh255.png" ></a>
+                    <a href="#"><img src="../image/anh255.png" width="500px"></a>
                 <p><b><a href="#">
                     Chuyện của Hải, cô Thắm và những chiến sĩ nỗ lực khoả lấp nỗi đau Làng Nủ</a></b></p>
                     <p><time>6 giờ trước</time></p>
@@ -438,7 +438,7 @@
                 </div>
                 <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
                 <div class="logo-mini">
-                    <img src="../image/logoDT.jpg" width="20px"></a>
+                    <img src="../images/logoDT.jpg" width="20px"></a>
                     <span>02473007108</span>
                 </div>
                 <div class="logo-mini-1">
