--- a/BTL3/Hocduong/Bantin46.html
+++ b/BTL3/Hocduong/Bantin46.html
@@ -537,7 +537,7 @@
                     <span>Tầng 4, Tòa nhà 123, số 127 Võ Văn Tần, phường 6, quận 3, TP. Hồ Chí Minh.</span><br>
                     <span>Điện thoại: 028 7307 7979</span>
                     <div class="logo-mini">
-                        <a href="#"><img src="../image/logoDC.jpg" width="15px"></a>
+                        <a href="#"><img src="../images/logoDC.jpg" width="15px"></a>
                         <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
                     </div>
                 </div>    
