--- a/BTL3/EMAGAZINE/EMAGAZINE.html
+++ b/BTL3/EMAGAZINE/EMAGAZINE.html
@@ -198,12 +198,13 @@
     </div>
 <div class="space">
 </div>
-    <div id="page">
+    <hr id="page">
         <div class="hi">
             <ul>
                 <li><a href="EMAGAZINE.html"><b>eMagazine</b></a></li>
             </ul>
         </div><br>
+    </hr>
         <div class="body">
             <div class="one">         
                 <section>
