--- a/BTL3/Hocduong/Bantin46.html
+++ b/BTL3/Hocduong/Bantin46.html
@@ -416,18 +416,6 @@
                 </aside>
             </div>
             <hr/>
-
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../image/anh76.png" ></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Triển lãm trưng bày thành tựu học viên Beyond The Multiverse</a></b></p>
-                    <p><b>Học đường -</b><time>16 giờ trước</time></p> 
-                    <p>"Arena Media Showcase: Beyond The Multiverse" là sự kiện trưng bày đồ án học viên và các sản phẩm sáng tạo tiêu biểu nhất của...</p>
-                </aside>
-            </div>
-            <hr/>
             <div class="two">
                 <section>
                     <a href="#"><img src="../image/anh77.png" ></a>
@@ -537,7 +525,7 @@
                     <span>Tầng 4, Tòa nhà 123, số 127 Võ Văn Tần, phường 6, quận 3, TP. Hồ Chí Minh.</span><br>
                     <span>Điện thoại: 028 7307 7979</span>
                     <div class="logo-mini">
-                        <a href="#"><img src="../images/logoDC.jpg" width="15px"></a>
+                        <a href="#"><img src="../image/logoDC.jpg" width="15px"></a>
                         <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
                     </div>
                 </div>    
