--- a/BTL3/Video/Danghot.html
+++ b/BTL3/Video/Danghot.html
@@ -320,7 +320,7 @@
                 <aside>
                     <p><b><a href="#">Cô gái bị đoàn xe chạy với tốc độ kinh hoàng tông giữa phố Hà Nội: Hình ảnh nạn nhân sau đó gây xót xa</a></b></p>
                     <p><b>Video News -</b> <time>12 giờ trước</time></p>
-                    <p>Mạng xã hội phẫn nộ nhóm thanh niên tụ tập phóng nhanh, đua xe tông một cô gái trong đêm ở Hà Nội khiến nạn nhân nằm bất động trên đường.</p>
+                    <p>Mạng xã hội phẫn nộ nhóm thanh niên tụ tập phóng nhanh, đua xe tông ...</p>
                 </aside>
             </div>
             <hr/>
