--- a/BTL3/Hocduong/Nhanvat.html
+++ b/BTL3/Hocduong/Nhanvat.html
@@ -359,7 +359,7 @@
                     <a href="#"><img src="../image/anh30.png"></a>
                 </section>
                 <aside>
-                    <p><b><a href="#">Thủ khoa toàn quốc tốt nghiệp THPT 2024: Gia cảnh khó khăn nhưng nỗ lực phi thường, viết Văn 12 trang giấy!
+                    <p><b><a href="#">Thủ khoa toàn quốc tốt nghiệp THPT 2024: Gia cảnh khó khăn nhưng nỗ lực phi thường, viết Văn 12 trang giấy!</a></b></p>
                     <p>Hà Nhi là một trong hai thủ khoa toàn quốc thi tốt nghiệp THPT 2024 với số điểm 57,85.</p>
                 </aside>
             </div>
