--- a/BTL3/Xemmualuon/Dẹp.html
+++ b/BTL3/Xemmualuon/Dẹp.html
@@ -224,7 +224,7 @@
                         <p><b><a href="#">1 dòng son của Hàn đang làm mưa làm gió trên thị trường làm đẹp, được ưu ái gọi là "son dưỡng idol"</a></b></p>
                         <p><b>Xem mua luôn-</b> <time>1 giờ trước</time></p>                   
                         <a href="#"><img src="../image/anh232.png" ></a>
-                    <p><b><a href="#">5 sản phẩm cấp ẩm từ đầu đến chân, là món quà chân ái cho các chị em trong mùa hanh khô</a></b></p>
+                    <p><b><a href="#">5 sản phẩm cấp ẩm từ đầu đến chân, </a></b></p>
                     <p><b>Xem mua luôn -</b><time>2 giờ trước</time></p>  
                 </aside>    
                 <aside>
