--- a/BTL3/Hocduong/Z-Schooltour.html
+++ b/BTL3/Hocduong/Z-Schooltour.html
@@ -215,6 +215,7 @@
             </ul>
         </div><br>
         <hr/>
+        <div class="body">
             <div class="zero">
                 <section>
                     <a href="#"><img src="../image/anh81.png" ></a>
@@ -479,6 +480,7 @@
                 </aside>
             </div>
             <hr/>
+        </div>
         </div>
         <div class="footer-menu">
             <a href="../../BTL1/Star/WebStar.html">Star</a> | 
