fix CSS BTL cua Phi

--- a/BTL3/EMAGAZINE/EMAGAZINE.html
+++ b/BTL3/EMAGAZINE/EMAGAZINE.html
@@ -198,19 +198,19 @@
     </div>
 <div class="space">
 </div>
-    <div id="page">
+    <hr id="page">
         <div class="hi">
             <ul>
                 <li><a href="EMAGAZINE.html"><b>eMagazine</b></a></li>
             </ul>
         </div><br>
-        <hr/>
+    </hr>
         <div class="body">
             <div class="one">         
                 <section>
                     <a href="#"><img src="../image/anh253.png" width="1000px" ></a>
                 </section>
-           
+
             </div>
             <div class="two">
                 <aside>     
@@ -430,7 +430,7 @@
                 </div>
                 <h4 id="liên hệ"> LIÊN HỆ QUẢNG CÁO</h4>
                 <div class="logo-mini">
-                    <img src="../images/logoDT.jpg" width="20px"></a>
+                    <img src="../image/logoDT.jpg" width="20px"></a>
                     <span>02473007108</span>
                 </div>
                 <div class="logo-mini-1">
